# OgarCpp

./: .gitignore  CMakeLists.txt  OgarCpp.project  OgarCpp.sln  OgarCpp.workspace  README.md  bench.json
OgarCpp/: OgarCpp.aps  OgarCpp.vcxproj  OgarCpp.vcxproj.filters  game.cfg
OgarCpp/Debug/: vc142.idb
OgarCpp/Debug/OgarCpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OgarCpp.lastbuildstate  OgarCpp.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OgarCpp/src/: ServerHandle.cpp  ServerHandle.h  Settings.h  SocketTest.cpp
OgarCpp/src/bots/: PlayerBot.cpp  PlayerBot.h
OgarCpp/src/cells/: Cell.cpp  Cell.h
OgarCpp/src/cli/: Main.cpp  default.cfg
OgarCpp/src/commands/: CommandList.h
OgarCpp/src/gamemodes/: FFA.cpp  FFA.h  Gamemode.cpp  Gamemode.h  GamemodeList.cpp  GamemodeList.h
OgarCpp/src/misc/: Misc.h  Stopwatch.h  Ticker.h
OgarCpp/src/primitives/: Logger.h  QuadTree.cpp  QuadTree.h  Reader.h  Rect.h  SimplePool.cpp  SimplePool.h  Writer.h
OgarCpp/src/protocols/: ModernProtocol.cpp  ModernProtocol.h  Protocol.h  Protocol6.cpp  Protocol6.h  ProtocolModern.cpp  ProtocolModern.h  ProtocolStore.h  ProtocolVanis.cpp  ProtocolVanis.h
OgarCpp/src/sockets/: ChatChannel.cpp  ChatChannel.h  Connection.cpp  Connection.h  Listener.cpp  Listener.h  Router.cpp  Router.h
OgarCpp/src/web/: AsyncFileReader.h  AsyncFileStreamer.h  Middleware.h
OgarCpp/src/worlds/: MatchMaker.cpp  MatchMaker.h  Player.cpp  Player.h  World.cpp  World.h
public/js/: main.js
x64/Debug/: OgarCpp.exp
